# shame.rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
derive_everything/: CHANGELOG.md  Cargo.toml
derive_everything/src/: lib.rs
derive_everything/tests/fail/: enum.rs  enum.stderr  nonsense.rs  nonsense.stderr  struct.rs  struct.stderr
derive_everything/tests/pass/: enum.rs  struct.rs
src/: clone_on_write.rs  lib.rs  prelude.rs  tests.rs
src/clone_on_write/: tests.rs
