[workspace]
members = ["derive_everything"]

[workspace.dependencies]
derive-where = "1"
derive_everything = { version = "0.1", path = "derive_everything" }
impls = "1"
pub-fields = "0.1"

[workspace.package]
description = "Convenience Rust utilities for when you don't care much about performance."
license = "MIT"
repository = "https://github.com/SichangHe/shame.rs"

[package]
name = "shame"
version = "0.0.1"
edition = "2021"
description.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-where.workspace = true
derive_everything.workspace = true
pub-fields.workspace = true

[dev-dependencies]
impls.workspace = true
