[workspace]
members = [".", "derive_everything"]

[workspace.dependencies]
anyhow = { version = "1", features = ["backtrace"] }
derive-where = "1"
derive_everything = { version = "0.1", path = "derive_everything" }
impls = "1"
pub-fields = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[workspace.package]
description = "Convenience Rust utilities for when you don't care much about performance."
license = "MIT"
repository = "https://github.com/SichangHe/shame.rs"

[package]
name = "shame"
version = "0.0.1"
edition = "2021"
description.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
derive-where.workspace = true
derive_everything.workspace = true
pub-fields.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
impls.workspace = true
