[package]
name = "derive_everything"
version = "0.1.0"
edition = "2021"
description = "#[derive(Copy, Clone, Debug, Default, Eq, Hash, Ord, PartialEq, PartialOrd)] everything if possible."
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dev-dependencies]
trybuild = { version = "1", features = ["diff"] }

[dependencies]
impls.workspace = true
quote = "1"
syn = { version = "2", features = ["full"] }
